# code_context_compiler

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
code_context_compiler/: ai_prompt.py  cli.py  config.py  masker.py  scraper.py
tests/: test_cli.py  test_config.py  test_masker.py  test_scraper.py
